--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "activeTab"
   ],
   "background": {
-    "service_worker": "background.js"
+    "scripts": ["background.js"]
   },
   "content_scripts": [
     {
